ejercicio_11/02_qa/07_areas-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: areas-backend-deployment
  namespace: qa
  labels:
    app: areas-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: areas-backend
  template:
    metadata:
      labels:
        app: areas-backend
      namespace: qa
    spec:
      containers:
      - name: areas-backend
        image: fredkor/api-areas-backend:1.0.0
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            name: 8080tcp
            protocol: TCP
        resources:
          requests:
            cpu: "250m"
            memory: "400Mi"
          limits:
            cpu: "600m"
            memory: "500Mi"
